drop content for #date in .header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="container">
         <h1 class="header-title">Todo List</h1>
-            <p class="header-date" id="date">Saturday, 15 June, 2024</p>
+            <p class="header-date" id="date"></p>
             <div class="task-input-holder">
                 <input type="text" id="task-text" placeholder="Enter Task" class="task-text">
                 <button id="add-task-btn" class="add-task-btn">ADD</button>
@@ -52,6 +52,7 @@
         </div>
     </footer>
 </div>
+<script src="./script/set-date.js"></script>
 <script src="./script/mvc.js"></script>
 </body>
 </html>
