improve content of extra btns

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     <footer class="footer" id="footer"> <!-- hidden --->
         <div class="container">
             <div class="extra-btn-holder">
-            <button class="extra-btn" id="show-all">show all</button>
-            <button class="extra-btn" id="important">important</button>
-            <button class="extra-btn" id="uncompleted">uncompleted</button>
-            <button class="extra-btn" id="completed">completed</button>
-            <button class="extra-btn" id="remove-all">remove all</button>
+            <button class="extra-btn" id="show-all">Show all</button>
+            <button class="extra-btn" id="important">Important</button>
+            <button class="extra-btn" id="uncompleted">Uncompleted</button>
+            <button class="extra-btn" id="completed">Completed</button>
+            <button class="extra-btn" id="remove-all">Remove all</button>
             </div>
         </div>
     </footer>
